feat: Create an API for submitting any transaction from the marketplace
